Fixed center alignment css

--- a/frontend/src/common/CategoryList/CategoryList.css
+++ b/frontend/src/common/CategoryList/CategoryList.css
@@ -1,3 +1,3 @@
-.modalcenter {
+.ADMIN_CATEGORY .modalcenter {
 	display: flex !important;
-  }
+}
